--- a/app/styles/style.sass
+++ b/app/styles/style.sass
@@ -12,7 +12,15 @@ html, body, iframe
   font-family: "Roboto"
   min-width: 1024px
 
-
+.view
+  width: 80vw
+  margin: 3vh 10vw 0 10vw
+  padding: 5vw
+  .file
+    padding: 1vh
+    margin: 1vh
+  .button
+    margin: 1vh
 .Header
   width: 100%
   height: $headerHeight
@@ -20,6 +28,7 @@ html, body, iframe
   border-bottom: 2px solid $blueMid1
   display: flex
   justify-content: center
+  align-items: center
   .HeaderBlock
     width: $headerBlockWidth
     height: inherit
